# Traffic-Counter-RPi_64-bit

./: CMakeLists.txt  README.md  Traffic.cbp  TrafficTracking.cbp  config.json
include/: BYTETracker.h  General.h  MJPG_sender.h  MJPGthread.h  Numbers.h  STrack.h  TChannel.h  TMapper.h  Tjson.h  yolo-fastestv2.h
src/: BYTETracker.cpp  MJPG_sender.cpp  MJPGthread.cpp  MQTT.cpp  STrack.cpp  TChannel.cpp  TMapper.cpp  Tjson.cpp  main.cpp  traffictrack.cpp  utils.cpp  yolo-fastestv2.cpp
